# xint-recruit

./: .gitignore  ASSIGNMENT.md  EVALUATION_CRITERIA.md  EVALUATION_GUIDE.md  README.md  SOLUTION.md  compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
backend/scripts/: create_user.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
